# ai-engineering-bootcamp-prerequisite

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/a2a_warehouse_management_agent/warehouse_management_agent/: agent.py
apps/api/: Dockerfile  pyproject.toml
apps/api/evals/: eval_retriever.py
apps/chatbot_ui/: pyproject.toml
apps/items_mcp_server/: pyproject.toml
apps/reviews_mcp_server/: pyproject.toml
apps/reviews_mcp_server/src/reviews_mcp_server/: main.py  utils.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-Amazon.ipynb  03-RAG-pipeline.ipynb  04-evaluation-dataset.ipynb  05-RAG-Evals.ipynb
notebooks/week_2/: 01-Structured-Outputs-Intro.ipynb  02-Structure-Output-RAG-pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-Versioning.ipynb
notebooks/week_3/: 01-LangGraph-Intro.ipynb  02-Query-Rewriting.ipynb  03-Router.ipynb  04-Agent-Single-Trun.ipynb
notebooks/week_4/: 01-Multi-Turn.ipynb  02-Multiple-Tools.ipynb  03-Human-Feedback.ipynb  04-MCP.ipynb  05-Streaming-State.ipynb
notebooks/week_5/: 01-Shopping-Cart-Agent-Tools.ipynb  02-Shopping-Cart-Agent.ipynb  03-Coordinator-Agent.ipynb  04-Warehouse-Agent-Database.ipynb  05-Warehouse-Agent-Tools.ipynb  06-Warehouse-Manager-Agent.ipynb
notebooks/week_5/utils/: tools.py
notebooks/week_6/: 01-litellm-router.ipynb  02-Warehouse-Agent-ADK.ipynb  04-Warehouse-Agent-A2A-LangGraph.ipynb  06-Prompt-Caching-Agent.ipynb
scripts/sql/: tools_database.sql
src/: app.py
(+28 files in other folders)
